# geticons

./: .build.yml  Cargo.toml  LICENSE  Makefile  README.md
contrib/: _incr_version
contrib/pkg/arch/: PKGBUILD
docs/: geticons.1.scd
pkgbuild/: PKGBUILD
src/: main.rs
