# geticons - A program to get icons in Freedesktop systems
# Copyright (C) 2020 Benjamin Aaron Goldberg <ben@benaaron.dev>
# 
# This program is free software: you can redistribute it and/or modify it under
# the terms of the GNU General Public License as published by the Free Software
# Foundation, either version 3 of the License, or (at your option) any later
# version.
# 
# This program is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
# PARTICULAR PURPOSE. See the GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License along with
# this program. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "geticons"
version = "1.2.1"
authors = ["Sashanoraa <sasha@noraa.gay>"]
edition = "2018"
description = "CLI tool to get icons on Linux and other Freedesktop systems"
license = "GPL-3.0-or-later"
documentation = "https://docs.rs/geticons/"
repository = "https://git.sr.ht/~zethra/geticons"
categories = ["command-line-utilities"]
keywords = ["cli", "freedesktop", "icons", "linux", "utility"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linicon = "2.3"
argh = "0.1"

[dependencies.prettytable-rs]
version = "0.8"
default-features = false
